# AF_Engine

./: .clangd  .gitignore  .gitmodules  AFEngine.sln  CMakeLists.txt  Dependencies.lua  README.md  premake5.lua
AF-Editor/: AF-Editor.vcxproj  AF-Editor.vcxproj.filters  CMakeLists.txt  imgui.ini  premake5.lua
AF-Editor/assets/model/: box.fbx
AF-Editor/assets/scenes/: 001.af  002.af  2dpy.af  Example.af  afproj.afproj
AF-Editor/assets/shaders/: Quad.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  denoise_pass.glsl  geometry_pass.glsl  hdr.glsl  lighting_pass.glsl  pbr.glsl  phong.glsl  phong_pass.glsl  shadow_pass.glsl  shadowmap_test.glsl  ssao_pass.glsl  ssgi_pass.glsl
AF-Editor/src/: AFEditorApp.cpp  EditorLayer.cpp  EditorLayer.h
AF-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SettingsPanel.cpp  SettingsPanel.h  StatsPanel.cpp  StatsPanel.h  ToolbarPanel.cpp  ToolbarPanel.h  ViewportPanel.cpp  ViewportPanel.h
AFEngine/: AFEngine.vcxproj  AFEngine.vcxproj.filters  CMakeLists.txt  premake5.lua
AFEngine/src/: AF.h  afpch.cpp  afpch.h
AFEngine/src/AF/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
AFEngine/src/AF/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
AFEngine/src/AF/Debug/: Instrumentor.h
AFEngine/src/AF/Events/: ApplicationEvent.h  DisposeEvent.h  Event.h  KetEvent.h  KeyEvent.h  MouseEvent.h
AFEngine/src/AF/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
AFEngine/src/AF/Loader/: AssimpLoader.cpp  AssimpLoader.h
AFEngine/src/AF/Math/: Math.cpp  Math.h
AFEngine/src/AF/Physics/: Physics2D.h
AFEngine/src/AF/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
AFEngine/src/AF/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  LightProbeManager.cpp  LightProbeManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  RendererBackend.cpp  RendererBackend.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UniformContainer.cpp  UniformContainer.h  VertexArray.cpp  VertexArray.h
AFEngine/src/AF/Renderer/API/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexArray.h
AFEngine/src/AF/Renderer/Camera/: Camera.cpp  Camera.h  CameraBase.h  CameraController.cpp  CameraController.h  GameCameraController.cpp  GameCameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCamera2D.cpp  OrthographicCamera2D.h  OrthographicCamera2DController.cpp  OrthographicCamera2DController.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h
AFEngine/src/AF/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
AFEngine/src/AF/Utils/: PlatformUtils.h
AFEngine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_glfw.cpp
AFEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini  premake5.lua
Sandbox/assets/shaders/: FlatColor.glsl  Quad.glsl  Test.frag  Test.glsl  Test.vert  Texture.glsl  geometry_pass.glsl  hdr.glsl  pbr.glsl  phong.glsl  shadow_pass.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  TetrisGame.cpp  TetrisGame.h
ff/material/: material.cpp
ff/render/driver/: driverUniforms.h
sandbox/: sandbox.vcxproj
scripts/: Win-GenProjects.bat
